--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="acerca-de" id="acerca-de">
             <div class="contenedor">
                 <div class="foto">
-                    <img src="img/acerca-de2.jpg" alt="Logo">
+                    <img src="img/acerca-de2.jpg" alt="">
                 </div>
                 <article>
                     <div class="foto-logo">
